# Cloudy_Spotify

./: .gitignore  DEPLOYMENT.md  README.md  app.py  config.py  debug-current-setup.js  index.html  lighthouse.config.js  package-lock.json  package.json  red-theme-test.html  requirements.txt  script.js  style.css  tailwind.config.js  test-css-conflicts.html  verify-fix.html  vite.config.ts
.github/workflows/: deploy.yml
legacy/: index.html
public/: music_engine_mock.js
scripts/: verify-deployment.js
src/: App.tsx  index.css
src/components/: NeuralNetworkVisualization.tsx  PremiumControlPanel.tsx  RealTimeMetricsDashboard.tsx
src/components/ui/: SectionHeader.tsx
src/cpp/: CMakeLists.txt  experience_buffer.cpp  experience_buffer.h  music_environment.cpp  music_environment.h  music_rl_engine.cpp  music_rl_engine.h  neural_network.cpp  neural_network.h
src/hooks/: useNeuralEngine.ts  useToast.ts
src/utils/: modelVersioning.ts
